; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_provider.c_OSSL_PROVIDER_load.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_provider.c_OSSL_PROVIDER_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @OSSL_PROVIDER_load(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* null, i32** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32* @ossl_provider_find(i32* %7, i8* %8, i32 0)
  store i32* %9, i32** %6, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32* @ossl_provider_new(i32* %12, i8* %13, i32* null, i32 0)
  store i32* %14, i32** %6, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  store i32* null, i32** %3, align 8
  br label %26

17:                                               ; preds = %11, %2
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @ossl_provider_activate(i32* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %17
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @ossl_provider_free(i32* %22)
  store i32* null, i32** %3, align 8
  br label %26

24:                                               ; preds = %17
  %25 = load i32*, i32** %6, align 8
  store i32* %25, i32** %3, align 8
  br label %26

26:                                               ; preds = %24, %21, %16
  %27 = load i32*, i32** %3, align 8
  ret i32* %27
}

declare dso_local i32* @ossl_provider_find(i32*, i8*, i32) #1

declare dso_local i32* @ossl_provider_new(i32*, i8*, i32*, i32) #1

declare dso_local i32 @ossl_provider_activate(i32*) #1

declare dso_local i32 @ossl_provider_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
